--- a/im/installer/package-manifest.in
+++ b/im/installer/package-manifest.in
@@ -308,9 +308,12 @@
 ; [DevTools Shim Files]
 @RESPATH@/chrome/devtools-shim@JAREXT@
 @RESPATH@/chrome/devtools-shim.manifest
-@RESPATH@/@PREF_DIR@/devtools-startup-prefs.js
 
 ; DevTools
+@RESPATH@/chrome/devtools@JAREXT@
+@RESPATH@/chrome/devtools.manifest
+@RESPATH@/@PREF_DIR@/devtools.js
+@RESPATH@/@PREF_DIR@/debugger.js
 @RESPATH@/components/devtools-startup.manifest
 @RESPATH@/components/devtools-startup.js
 @RESPATH@/components/aboutdebugging-registration.js
