Bug 1354845 - Add IA2Marshal and AccessibleHandler to Instantbird. r=jorgk DONTBUILD
Port Bug 1275731 [Add IA2Marshal.dll to package and installer]
Port Bug 1288841 [Add a typelib containing info for IServiceProvider and IEnumVARIANT]
Port Bug 1354208 [Add AccessibleHandler.dll to installer]
Port Bug 1355968 [Ensure AccessibleHandler.dll is registered in PostUpdate]
Port Bug 1357194 [Use MOZ_UPDATE_CHANNEL to distinguish between local/nightly and beta/release builds for AccessibleHandler CLSIDs]

--- a/im/installer/package-manifest.in
+++ b/im/installer/package-manifest.in
@@ -361,7 +361,10 @@
 #ifdef ACCESSIBILITY
 @RESPATH@/components/accessibility.xpt
 #ifdef XP_WIN32
+@BINPATH@/Accessible.tlb
+@BINPATH@/AccessibleHandler.dll
 @BINPATH@/AccessibleMarshal.dll
+@BINPATH@/IA2Marshal.dll
 #endif
 #endif
 
