Bug 1354845 - Add IA2Marshal and AccessibleHandler to SeaMonkey. r=IanN
Port Bug 1275731 [Add IA2Marshal.dll to package and installer]
Port Bug 1288841 [Add a typelib containing info for IServiceProvider and IEnumVARIANT]
Port Bug 1354208 [Add AccessibleHandler.dll to installer]
Port Bug 1355968 [Ensure AccessibleHandler.dll is registered in PostUpdate]
Port Bug 1357194 [Use MOZ_UPDATE_CHANNEL to distinguish between local/nightly and beta/release builds for AccessibleHandler CLSIDs]

--- a/suite/installer/package-manifest.in
+++ b/suite/installer/package-manifest.in
@@ -160,7 +160,10 @@
 ; [Components]
 #ifdef ACCESSIBILITY
 #ifdef XP_WIN32
+@BINPATH@/Accessible.tlb
+@BINPATH@/AccessibleHandler.dll
 @BINPATH@/AccessibleMarshal.dll
+@BINPATH@/IA2Marshal.dll
 #endif
 @RESPATH@/components/accessibility.xpt
 #endif
