Bug 1387341 - Port bug 1386620 to C-C [dt-addon-prefs: move jsonview enabled pref outside of devtools addon]. r=jorgk DONTBUILD

--- a/mail/installer/package-manifest.in
+++ b/mail/installer/package-manifest.in
@@ -317,6 +317,7 @@
 ; [DevTools Shim Files]
 @RESPATH@/chrome/devtools-shim@JAREXT@
 @RESPATH@/chrome/devtools-shim.manifest
+@RESPATH@/@PREF_DIR@/devtools-startup-prefs.js
 
 ; DevTools
 @RESPATH@/chrome/devtools@JAREXT@
