--- a/taskcluster/ci/config.yml
+++ b/taskcluster/ci/config.yml
@@ -59,10 +59,12 @@ scriptworker:
             - 'project:comm:thunderbird:releng:beetmover:bucket:dep'
         'scriptworker-prov-v1/tb-beetmover-v1':
             - 'project:comm:thunderbird:releng:beetmover:bucket:nightly'
+            - 'project:comm:thunderbird:releng:beetmover:bucket:release'
         'scriptworker-prov-v1/tb-balrog-dev':
             - 'project:comm:thunderbird:releng:balrog:server:dep'
         'scriptworker-prov-v1/tb-balrog-v1':
             - 'project:comm:thunderbird:releng:balrog:server:nightly'
+            - 'project:comm:thunderbird:releng:balrog:server:beta'
 
 partner:
     release: {}
