--- a/calendar/test/unit/xpcshell-shared.ini
+++ b/calendar/test/unit/xpcshell-shared.ini
@@ -34,6 +34,7 @@
 [test_hashedarray.js]
 [test_ics.js]
 [test_ics_parser.js]
+skip-if = true # See bug 1469499.
 [test_ics_service.js]
 [test_imip.js]
 [test_items.js]
