--- a/calendar/test/unit/xpcshell-shared.ini
+++ b/calendar/test/unit/xpcshell-shared.ini
@@ -40,6 +40,7 @@ skip-if = true # See bug 1469499.
 [test_items.js]
 [test_ltninvitationutils.js]
 [test_providers.js]
+skip-if = true # See bug 1469501.
 [test_recur.js]
 [test_relation.js]
 [test_rfc3339_parser.js]
