--- a/mailnews/jsaccount/test/unit/xpcshell.ini
+++ b/mailnews/jsaccount/test/unit/xpcshell.ini
@@ -9,3 +9,4 @@ support-files = resources/*
 [test_fooUrl.js]
 skip-if = true # See bug 1447492.
 [test_jaMsgFolder.js]
+skip-if = os == 'win' # See bug 1475166.
