--- a/taskcluster/ci/nightly-l10n/kind.yml
+++ b/taskcluster/ci/nightly-l10n/kind.yml
@@ -2,7 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-loader: taskgraph.loader.single_dep:loader
+loader: taskgraph.loader.multi_dep:loader
+
+group-by: platform
 
 transforms:
     - taskgraph.transforms.l10n:transforms
@@ -12,6 +14,9 @@ transforms:
 
 kind-dependencies:
     - build
+    - build-signing
+    - repackage
+    - repackage-signing
     - toolchain
 
 only-for-build-platforms:
