--- a/mailnews/addrbook/test/unit/xpcshell.ini
+++ b/mailnews/addrbook/test/unit/xpcshell.ini
@@ -12,6 +12,7 @@ support-files = data/*
 [test_collection.js]
 [test_collection_2.js]
 [test_db_enumerator.js]
+skip-if = true # See bug 1475836.
 [test_ldap1.js]
 [test_ldap2.js]
 [test_ldapOffline.js]
@@ -27,6 +28,8 @@ support-files = data/*
 [test_nsAbAutoCompleteSearch7.js]
 [test_nsAbManager1.js]
 [test_nsAbManager2.js]
+skip-if = true # See bug 1475836.
 [test_nsAbManager3.js]
+skip-if = true # See bug 1475836.
 [test_nsIAbCard.js]
 [test_uuid.js]
