--- a/taskcluster/ci/toolchain/kind.yml
+++ b/taskcluster/ci/toolchain/kind.yml
@@ -21,7 +21,9 @@ jobs:
     - linux64-rust-1.19
     - linux64-rust-macos
     - linux64-sccache
+    - linux64-node
     - win64-clang-cl
     - win64-rust
     - win64-rust-1.19
     - win64-sccache
+    - win64-node
